# cross-agent-reviews

./: .gitignore  .pre-commit-config.yaml  .release-archive.json  .version-bump.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sitecustomize.py
.claude-plugin/: marketplace.json
.codex-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  dependency-cooldown-rescan.yml  dependency-cooldown.yml  dependency-safety.yml  pre-commit-autoupdate.yml  release.yml  security.yml  tag-release.yml
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/skills/_shared/: attribution.md  dispatch-template-1a.md  dispatch-template-2a.md  dispatch-template-3a.md  status-protocol.md
plugin/skills/cr/: SKILL.md
plugin/skills/cr-1a-audit/: SKILL.md
plugin/skills/cr-1b-settle/: SKILL.md
plugin/skills/cr-2a-audit/: SKILL.md
plugin/skills/cr-2b-settle/: SKILL.md
plugin/skills/cr-3a-final-audit/: SKILL.md
plugin/skills/cr-3b-final-settle/: SKILL.md
plugin/skills/cr/_helpers/: _cr_lib.py  cr  cr_extract_placeholders.py  cr_profile_suggest.py  cr_routing.py  cr_state_init.py  cr_state_pick_slug.py  cr_state_read.py  cr_state_status.py  cr_state_write.py  cr_validate.py  cr_validate_finding.py
plugin/skills/cr/_shared/: attribution.md  cross-artifact-slice.md  dispatch-template.md  model-tier-rubric.md  preflight.md  self-review.md  status-report.md
plugin/skills/cr/_shared/schema/: adjudication.schema.json  changelog-entry.schema.json  final-verification.schema.json  finding.schema.json  round-audit.schema.json  round-settle.schema.json  self-review-entry.schema.json  state.schema.json  verification.schema.json
plugin/skills/cr/rounds/: 1a-audit.md  1b-settle.md  2a-audit.md  2b-settle.md  3a-audit.md  3b-settle.md  3c-verify.md
scripts/: _cr_lib.py  cr_extract_placeholders.py  cr_state_init.py  cr_state_pick_slug.py  cr_state_read.py  cr_state_status.py  cr_state_write.py  cr_validate.py  cr_validate_finding.py  verify-prompt-contract.sh
tests/: conftest.py  test_cr_extract_placeholders.py  test_cr_lib.py  test_cr_lib_slug_validation.py  test_cr_profile_suggest.py  test_cr_routing.py  test_cr_state_init.py  test_cr_state_pick_slug.py  test_cr_state_read.py  test_cr_state_status.py  test_cr_state_write.py  test_cr_validate.py  test_cr_validate_finding.py  test_dependabot_config.py  test_helper_invocation.py  test_marketplace_manifests.py  test_pre_commit_config.py  test_pyproject_metadata.py  test_schemas.py  test_smoke.py  test_subprocess_coverage.py
tests/auditing/: check_test_first_order.py  test_check_test_first_order.py
tests/bats/: test_cr_wrapper.bats  test_release_archive_config.bats  test_verify_prompt_contract.bats  test_version_bump_config.bats
tests/fixtures/artifacts/: plan.md  spec.md
tests/fixtures/schema_negative/: adjudication_bad_verdict.json  final_verification_passed_unresolved.json  finding_bad_severity.json  finding_missing_severity.json  round_3b_missing_final_status.json  round_3b_settle_nonblocker_accepted.json  round_audit_wrong_round_for_stage.json  state_bad_stage.json  verification_bad_status.json
tests/fixtures/schema_positive/: adjudication_accept.json  adjudication_reject.json  changelog_entry.json  final_verification_passed.json  finding_minimal.json  round_1a_audit.json  round_1b_settle.json  round_1b_settle_nit_accepted.json  round_2a_audit.json  round_2b_settle_false_positive_accepted.json  round_3a_audit.json  round_3b_settle.json  round_3b_settle_corrected.json  self_review_clean.json  state_spec_and_plan.json  state_spec_only.json  verification_resolved.json
tests/fixtures/spec_plan_pairs/cited/: plan.md
tests/fixtures/spec_plan_pairs/hallucinated/: plan.md  spec.md
tests/fixtures/spec_plan_pairs/multi_candidate/: plan.md  spec.md
tests/fixtures/spec_plan_pairs/plan_only_concrete/: plan.md  spec.md
tests/fixtures/spec_plan_pairs/preserved/: plan.md  spec.md
tests/fixtures/spec_plan_pairs/zero_candidate/: plan.md  spec.md
tests/fixtures/state_write_inputs/: round_1a_clean_input.json  round_1a_input.json  round_1a_input_nit.json  round_1b_input.json  round_2a_clean_input.json  round_2a_input.json  round_2b_input.json  round_3a_input.json  round_3a_input_blocker.json  round_3b_input.json  round_3b_input_accept.json  round_3b_input_adjudicate.json  round_3c_input_fail.json  round_3c_input_pass.json
tests/integration/: test_cross_host_paste.py  test_full_pipeline_single_host.py  test_placeholder_hallucination.py  test_spec_drift.py
