[project]
name = "cross-agent-reviews"
# Static placeholder. Canonical version is the git tag (vX.Y.Z) and the 4
# manifest files listed in `.version-bump.json`. This field is informational
# only — `uv sync` treats this project as virtual (no install of own code),
# so the value is not consumer-visible. It is left at the initial value to
# avoid drift maintenance.
version = "0.1.0"
description = "3-round cross-agent spec/plan review pipeline as a multi-host plugin"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["jsonschema>=4.18,<5"]

[dependency-groups]
dev = [
    "pytest>=7.0,<10",
    "pytest-cov>=4.0,<8",
    "ruff>=0.5,<1",
    "pre-commit>=3.7,<5",
    "pyyaml>=6.0,<7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
python_files = ["test_*.py"]
# Make `from _cr_lib import ...` resolve in tests that import the helpers
# directly (the helpers themselves run in script mode, where `_helpers/`
# is automatically on sys.path[0]). Tests run under pytest, not script mode,
# so they need an explicit pythonpath entry.
pythonpath = ["plugin/skills/cr/_helpers"]

[tool.coverage.run]
source = ["plugin/skills/cr/_helpers"]
branch = true
parallel = true
patch = ["subprocess"]
# `patch = ["subprocess"]` asks coverage.py to pass serialized coverage
# config to child Python processes; `parallel = true` then lets pytest-cov
# merge each subprocess data file into the parent report.

[tool.coverage.report]
fail_under = 85
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.ruff]
line-length = 100
extend-exclude = ["plugin/skills/cr/_shared/schema/*.json"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
    "PIE",
    "PGH",
    "N",
    "S",
    "PT",
    "TCH",
]
ignore = [
    "E501",
    "S603",
    "S607",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "S105"]
"plugin/skills/cr/_helpers/cr_*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pyright]
# Repo Pyright policy. Single source of truth shared by repo-root CLI runs,
# Homebrew/global Pyright, and IDE/LSP integrations. This pins the repo's
# current effective policy; it is NOT a move to strict typing.
typeCheckingMode = "standard"
# Match the language floor declared in `requires-python` so `from datetime
# import UTC` (added in 3.11) is recognized.
pythonVersion = "3.11"

# Scope Pyright to repo-owned Python. Generated/local-only paths (.venv,
# .worktrees/, dist/, cross_agent_reviews.egg-info/, and caches) stay out of
# analysis by construction because they are outside this include set, so no
# custom `exclude` block is needed (and adding one would replace Pyright's
# default excludes).
include = ["plugin/skills/cr/_helpers", "tests", "sitecustomize.py"]

# Mirror pytest's pythonpath so Pyright resolves flat `from _cr_lib import ...`
# script-mode imports the same way the test runtime does (the helpers live
# outside any Pyright-discoverable package because Shape A uses script-mode
# flat imports).
extraPaths = ["plugin/skills/cr/_helpers"]
# Point at the project venv so jsonschema/referencing resolve from source.
venvPath = "."
venv = ".venv"
